--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-      <h1>Strapi Books
+      <h1>BookDucks
         <img src="/images/icon.png" id="icon" alt="">
       </h1>
       
@@ -37,8 +37,7 @@
         <th>Title</th>
         <th>Author</th>
         <th>Avg score</th>
-        <th>
-          <img id="img" src="" alt="">Image</th>
+        <th> Image </th>
           <th> Add </th>
       </tr>
       </table>
@@ -50,12 +49,11 @@
           <th>Title</th>
           <th>Author</th>
           <th>Avg score</th>
-          <th>
-            <img id="img" src="" alt="">Image</th>
+          <th>Image</th>
         </tr>
       
     </table>
-    <footer>©Copyright</footer>
+    <footer>©Copyright 2023</footer>
   </body>
 </html>
 
