added to register

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
     <button id="logout">Logout</button>
     <button id="signup">Sign up</button>
    </nav>
+   <div id="myModal" class="modal">
+
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>
+        <input type="text" id="username" placeholder="username">
+        <input type="text" id="password" placeholder="password">
+        <input type="text" id="email" placeholder="email">
+        <button id="register">register</button>
+      </p>
+    </div>
+   </div>
   </div>
    
     <h2>Books</h2>
