--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <p>
-        <input type="text" id="username" placeholder="username">
-        <input type="text" id="password" placeholder="password">
-        <input type="text" id="email" placeholder="email">
+        <input type="text" id="usernameReg" placeholder="username">
+        <input type="text" id="passwordReg" placeholder="password">
+        <input type="text" id="emailReg" placeholder="email">
         <button id="register">register</button>
       </p>
     </div>
